--- a/eds-222-hw1.qmd
+++ b/eds-222-hw1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "EDS 222: Homework 1"
-date: "Assigned ???, due ???"
-author: "Your Name Here"
+date: "Assigned 10/7, due 10/14"
+author: "Brooke Grazda"
 ---
 
 ## Background
@@ -28,17 +28,36 @@ In answering the following questions, please consider the lecture content from c
 
 Load the data from each source and label it as `crowdsourced` and `govt` accordingly. For example:
 
-``` r
+``` {r}
+library(tidyverse)
+
 crowdsourced <- readRDS(file.path("data", "airpol-PK-crowdsourced.RDS"))
 govt <- readRDS(file.path("data", "airpol-PK-govt.RDS"))
 ```
 
 ::: callout-warning
 There's an implicit assumption about file organization in the code above. What is it? How can you make the code work?
+Must create a data folder, and the assumption is that your project is in its own repo folder. Loading the data into the data folder makes the code work.
 :::
 
+
 1.  These dataframes have one row per pollution observation. How many pollution records are in each dataset?
-2.  Each monitor is located at a unique latitude and longitude location. How many unique monitors are in each dataset?
+There are 5488 pollution crowdsourced pollution records and 1960 government pollution records.
+2.  Each monitor is located at a unique latitude and longitude location. How many unique monitors are in each dataset? 
+There are 14 unique monitors in the crowdsourced data set and 5  unique monitors in the govt dataset. 
+
+
+```{r}
+# Find unique values
+unique_govt_values <- govt |> 
+  group_by(longitude, latitude) |> 
+  summarise(list(cur_group_id()))          # List out the unique numeric identifier for each group 
+
+unique_crowdsourced_values <- crowdsourced |> 
+  group_by(longitude, latitude) |> 
+  summarise(list(cur_group_id()))
+```
+
 
 ::: callout-tip
 `group_by(longitude,latitude)` and `cur_group_id()` in `dplyr` will help in creating a unique identifier for each (longitude, latitude) pair.
@@ -49,14 +68,26 @@ There's an implicit assumption about file organization in the code above. What i
 The goal of pollution monitoring in Lahore is to measure the average pollution conditions across the city.
 
 1.  What is the *population* in this setting? Please be precise.
+The population is the total exposure of 11.1 million people in Lahore, Pakistan who are susceptible increased respiratory and cardiovascular health risks, ranking Lahore as the 12th most polluted city in the world.
 
 2.  What are the *samples* in this setting? Please be precise.
 
+The samples are the pollution level monitors that are crowdsourced and employed by the Lahore government. 
+
 3.  These samples were not randomly collected from across locations in Lahore. Given the sampling approaches described above, discuss possible biases that may enter when we use these samples to construct estimates of population parameters.
+
+There is definitely a convenience bias by choosing the location of the government employed monitors. It may be true that it is easier for the government to set up these monitors in areas with less air pollution, or it is that this was an example of undercoverage/confirmation bias in failing to provide a representative sample of the wider city pollution exposure. There is certainly a selection bias in those who volunteer to use their homes as monitors. It is likely that those who care more about the issue or have the means to volunteer WILL volunteer, making the sample not representative of the whole population. 
 
 ### Question 3
 
 1.  For both the government data and the crowd-sourced data, report the sample mean, sample minimum, and sample maximum value of PM 2.5 (measured in $\mu g/m^3$).
+
+```{r}
+govt_mean <- mean(govt$PM)
+govt_min <- min(govt$PM)
+```
+
+
 2.  Discuss any key differences that you see between these two samples.
 3.  Are the differences in mean pollution as expected, given what we know about the sampling strategies?
 
